--- a/requirements.txt
+++ b/requirements.txt
@@ -60,5 +60,14 @@ streamlit==1.41.1
 # # Additional dependencies
 tiktoken==0.8.0
 pydantic==2.10.3
-pydantic-settings==2.7.0
+pydantic-settings==2.7.
+
 SQLAlchemy==2.0.36
+
+# FastAPI and server
+fastapi==0.115.5
+uvicorn[standard]==0.32.1
+python-multipart==0.0.18
+
+# CORS support
+python-jose==3.3.0
